tests/ui/resolve/suggestions/suggest-path-for-tuple-struct.stderr
error[E0423]: expected value, found struct `SomeTupleStruct`
  --> $DIR/suggest-path-for-tuple-struct.rs:22:13
   |
LL |     let _ = SomeTupleStruct.new();
   |             ^^^^^^^^^^^^^^^
   |
help: use the path separator to refer to an item
   |
LL -     let _ = SomeTupleStruct.new();
LL +     let _ = SomeTupleStruct::new();
   |

error[E0423]: expected value, found struct `SomeRegularStruct`
  --> $DIR/suggest-path-for-tuple-struct.rs:24:13
   |
LL |     let _ = SomeRegularStruct.new();
   |             ^^^^^^^^^^^^^^^^^
   |
help: use the path separator to refer to an item
   |
LL -     let _ = SomeRegularStruct.new();
LL +     let _ = SomeRegularStruct::new();
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0423`.
